Added basic styling, overhauled accessibility: inputs have <label elements>, keyboard navigation is easier

--- a/templates/404.jinja
+++ b/templates/404.jinja
@@ -1,6 +1,10 @@
 <!-- Error page when you visited the wrong URL or did something very very wrong :O-->
 {% extends 'base.jinja' %}
 
-{% block content %} 
-   <h1>404 Error!</h1>
+{% block content %}
+<main>
+   <section class="text">
+      <h1>404 Error!</h1>
+   </section>
+</main>
 {% endblock %}
