--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -10,14 +10,36 @@ Yeah I know it's pretty ugly...
 -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>HTML :)</title> 
-        <script src="/static/js/libs/axios.min.js"></script>
-        <script src="/static/js/libs/jquery.min.js"></script>
-        <script src="/static/js/libs/js.cookie.min.js"></script>
-    </head>
-    <body>
-        <!-- The content from any other page goes here -->
+
+<head>
+    <title>INFO2222 Usability</title>
+    <script src="/static/js/libs/axios.min.js"></script>
+    <script src="/static/js/libs/jquery.min.js"></script>
+    <script src="/static/js/libs/js.cookie.min.js"></script>
+    <script>
+        var username = null;
+    </script>
+    <link rel="stylesheet" href="/static/css/style.css">
+</head>
+
+<body>
+    <nav>
+        <div id="nav-logged-in">
+            <a href="/home">Home</a>
+            <a href="/friends">Friends</a>
+            <div id="nav-username">
+                Username: <span class="username-text"></span>
+            </div>
+        </div>
+        <div id="nav-logged-out">
+            <a href="/login">Log In</a>
+            <a href="/signup">Sign Up</a>
+        </div>
+    </nav>
+    <!-- The content from any other page goes here -->
         {% block content %} {% endblock %}
-    </body>
+    <footer>INFO2222 Project: Usability</footer>
+    <script src="static/js/includes.js"></script>
+</body>
+
 </html>
