--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -5,9 +5,13 @@ Index page, the "default" page when you visit "http://localhost/"
 {% extends 'base.jinja' %}
 
 
-{% block content %} 
-    <h1>Hello! Welcome to the site!</h1>
-    <p><a href={{ url_for('signup') }}>Sign Up</a></p>
-    <p><a href={{ url_for('login') }}>Log In</a></p>
-    
+{% block content %}
+<main>
+    <section class="text">
+        <h2>Hello! Welcome to the site!</h2>
+        <p><a href="/signup">Sign Up</a></p>
+        <p><a href="/login">Log In</a></p>
+    </section>
+</main>
+
 {% endblock %}
