--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -25,15 +25,20 @@ Yeah I know it's pretty ugly...
 <body>
     <nav>
         <div id="nav-logged-in">
-            <a href="/home">Home</a>
-            <a href="/friends">Friends</a>
+            <ul class="button">
+                <a href="/home">Home</a>
+                <a href="/friends">Friends</a>
+            </ul>
+                
             <div id="nav-username">
-                Username: <span class="username-text"></span>
+               <span class="username-text"></span>
             </div>
         </div>
         <div id="nav-logged-out">
-            <a href="/login">Log In</a>
-            <a href="/signup">Sign Up</a>
+            <ul class="button">
+                <a href="/login">Log In</a>
+                <a href="/signup">Sign Up</a>
+            </ul>
         </div>
     </nav>
     <!-- The content from any other page goes here -->
