--- a/templates/login.jinja
+++ b/templates/login.jinja
@@ -9,14 +9,12 @@
     <section class="text">
         <div class="login-form">
             <h2>Log In</h2>
-            <label for="username">Username: </label><br>
+            <label for="username">Username</label><br>
             <input id="username" autofocus /><br><br>
-            <label for="password">Password: </label><br>
-            <input id="password" type="password" />
-            <button onclick="login()">Log In</button>
-            <p>
-                <a href="/signup">Sign up instead</a>
-            </p>
+            <label for="password">Password</label><br>
+            <input id="password" type="password" /><br><br>
+            <button class="signuplogin" onclick="login()">Log In</button>
+
         </div>
     </section>
 </main>
