--- a/templates/signup.jinja
+++ b/templates/signup.jinja
@@ -6,18 +6,14 @@ Sign up page, pretty much the same as login.
 
 {% block content %}
 <main>
-    <section class="text">
+    <section class="text" >
         <div class="login-form">
             <h2>Sign Up</h2>
-            <label for="username">Username: </label><br>
+            <label for="username">Username</label><br>
             <input id="username" autofocus /><br><br>
-            <label for="password">Password: </label><br>
-            <input id="password" type="password" />
-            <button onclick="signup()">Sign Up</button>
-        </div>
-        <p>
-            <a href="/login">Log in instead</a>
-        </p>
+            <label for="password">Password</label><br>
+            <input id="password" type="password" /><br><br>
+            <button class="signuplogin" onclick="signup()">Sign Up</button>        </div>
     </section>
 </main>
 
