--- a/templates/friends.jinja
+++ b/templates/friends.jinja
@@ -1,7 +1,7 @@
 <!-- Error page when you visited the wrong URL or did something very very wrong :O-->
 {% extends 'base.jinja' %}
 {% block content %}
-<main>
+<main class="friends">
     <section class="text">
         <h2>Friends:</h2>
         <ul>
