Switch functionality to change between dark and light mode

--- a/templates/signup.jinja
+++ b/templates/signup.jinja
@@ -13,7 +13,8 @@ Sign up page, pretty much the same as login.
             <input id="username" autofocus /><br><br>
             <label for="password">Password</label><br>
             <input id="password" type="password" /><br><br>
-            <button class="signuplogin" onclick="signup()">Sign Up</button>        </div>
+            <button class="signuplogin" onclick="signup()">Sign Up</button>
+        </div>
     </section>
 </main>
 
