--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
     --color-sec-0: #addca8;
     --color-acc-0: #57c985;
     --color-txt-0: #140d07;
+    transition-duration: 1s;
 }
 
 * {
@@ -35,6 +36,7 @@ nav {
     overflow: hidden;
     background-color: #3b3b3b;
     box-shadow: 0 0 40px;
+    transition-duration: 1s;
 }
 
 ul.button {
@@ -58,7 +60,6 @@ transition-duration: 0.3s;
 nav a {
     float: left;
     padding: 0.5rem;
-    background-color: #3b3b3b;
     color: #140d07;
     font-size: 1.25rem;
     text-decoration: none;
@@ -78,7 +79,77 @@ main {
     background-color: #3a3a3a;
     border-radius: 15px;
     border: 5px solid #292929;
+    transition-duration: 1s;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 20px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 12px;
+    width: 12px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #3a3a3a;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #3a3a3a;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(38px);
+    -ms-transform: translateX(38px);
+    transform: translateX(38px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+
+  label.switch {
+    position: absolute;
+    bottom: 0.5%;
+    right: 0.5%;
+  }
 
 main.messaging-app {
     max-width: fit-content;
@@ -107,7 +178,6 @@ input#receiver:focus {
 }
 
 footer {
-    background-color: #1a1a1a;
     padding-bottom: 0.1rem;
     padding-left: 0.3rem;
     position: absolute;
