--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -27,7 +27,7 @@ Yeah I know it's pretty ugly...
         <div id="nav-logged-in">
             <ul class="button">
                 <a href="/home">Home</a>
-                <a href="/friends">Friends</a>
+                <a href="/friends" >Friends</a>
             </ul>
                 
             <div id="nav-username">
@@ -36,15 +36,22 @@ Yeah I know it's pretty ugly...
         </div>
         <div id="nav-logged-out">
             <ul class="button">
-                <a href="/login">Log In</a>
-                <a href="/signup">Sign Up</a>
+                <a href="/login" >Log In</a>
+                <a href="/signup" >Sign Up</a>
             </ul>
         </div>
     </nav>
     <!-- The content from any other page goes here -->
         {% block content %} {% endblock %}
-    <footer>INFO2222 Project: Usability</footer>
-    <script src="static/js/includes.js"></script>
+    <footer>
+    INFO2222 Project: Usability
+    </footer>
+    <label class="switch">
+    <input type="checkbox" id="ThemeCheckbox" onclick="switch_function()" checked>
+    <span class="slider round"></span>
+    </label>
+    <script src="static/js/includes.js">
+    </script>
 </body>
 
 </html>
