--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,8 +66,42 @@ nav a {
     display: block;
 }
 
+nav button {
+    float: left;
+    padding: 0.5rem;
+    color: #140d07;
+    font-size: 1.25rem;
+    text-decoration: none;
+    display: block;
+    font-family: monospace;
+    background: 0;
+    border: 0;
+}
+
+nav button:hover {
+    background-color: #292929;
+    transition-duration: 0.3s;
+}
+
 div.login-form {
     text-align: center;
+}
+
+.buttonStyling {
+    background-color: #1a1a1a;
+    padding: 2px;
+    float: right;
+    font-family: monospace;
+    transition-duration: 0s;
+}
+
+div#popupMenu {
+    border: 3px solid black;
+    position: absolute;
+    top: 5.9rem;
+    display: none;
+    right: 2.4rem;
+    background-color: gray;
 }
 
 main {
@@ -82,73 +116,13 @@ main {
     transition-duration: 1s;
 }
 
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 20px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 12px;
-    width: 12px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #3a3a3a;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #3a3a3a;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(38px);
-    -ms-transform: translateX(38px);
-    transform: translateX(38px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
 
 
-  label.switch {
+  button.switch {
     position: absolute;
     bottom: 0.5%;
     right: 0.5%;
+    width: fit-content;
   }
 
 main.messaging-app {
@@ -158,7 +132,8 @@ main.messaging-app {
 }
 
 main.friends {
-    width: 100px;
+    max-width: 100%;
+    margin-top: 1rem;
 }
 
 section.text {
